# zephyr-pdiot

./: .gitignore  README.md
pdiot/: .gitmodules  CMakeLists.txt  prj.conf
pdiot/src/: accelerometer.cpp  accelerometer.h  gyro_lite_model.cpp  gyro_lite_model.h  main.cpp  neural_network.cpp  neural_network.h  tfservice.h
